- UI:
	- Improve prevention of click-through of various windows in the editor.
	- Open sections of the AI GUI now remain open when switching between flight and editor.
	- Competition UI text in the upper left corner now properly scales when adjusting UI_SCALE.
	- Added an option to follow the stock UI scaling instead of BDA's one.
	- Add ability to set teams' Allies to the Team Selector GUI.
- AI:
	- Fix AI not going into Ramming mode when guns possess ammo, but not enough to meet resourceRequestAmount of mounted weapons.
	- Orbital AI now automatically disables gimbal on reverse thrust and RCS engines (gimbal directions for these are incorrect).
	- Add missing sonar checks for AIs trying to fire torpedoes.
	- Fix AI not turning on Active sonar when trying to fire INS torpedoes if no passive sonar on vessel.
	- AI can now make use of non-DynamicRadar radars for missile targeting when being actively targeted by incoming anti-radiation ordinance.
	- AI visual detection of incoming missiles within visual range no longer requires a RWR. RWR detection of incoming missiles still requires a RWR on the craft.
	- Tweak AI detection and reaction to incoming GPS/INS missiles, they should detect and react to them a bit more consistantly now.
	- The pilot AI now stays in "normal flight" mode when flying in formation for better stability.
	- Add a 'min gain rate' option to the extending to avoid excessively long extending runs.
- Competition:
	- Fix craft equipped with repulsors breaking ground spawn.
	- Add support for using custom spawn templates with RNG style tournaments.
		- The number of teams per heat and vessels per team per heat are restricted to at most those in the selected spawn template.
		- Teams are considered as the per file / per folder option.
		- The "Re-use Craft To Fill Teams" option applies for teams that lack sufficient craft to fill the spawn template.
		- Both shuffled and ranked tournaments are supported.