@@ -615,6 +615,12 @@ Localization
         #LOC_BDArmory_CraftBrowser_Version = Version
         #LOC_BDArmory_CraftBrowser_Craft = Craft
         #LOC_BDArmory_CraftBrowser_Folder = Folder
+        #LOC_BDArmory_CraftBrowser_GenerateMissingThumbnails = Generate Missing Thumbnails
+        #LOC_BDArmory_CraftBrowser_GenerateMissingThumbnailsRecurse = Recurse subfolders
+        #LOC_BDArmory_CraftBrowser_GenerateMissingThumbnailsGeneratingFor = Generating thumbnail for
+        #LOC_BDArmory_CraftBrowser_GenerateMissingThumbnailsGeneratingForCraftIn = Generating thumbnail for craft in
+        #LOC_BDArmory_CraftBrowser_GenerateMissingThumbnailsFinished = Finished generating thumbnails.
+        #LOC_BDArmory_CraftBrowser_GenerateMissingThumbnailsFailure = Unable to capture thumbnail of
 
     // Scores
         #LOC_BDArmory_BDAScores_Title = Tournament Scores
