@@ -28,10 +28,10 @@ namespace BDArmory.VesselSpawning
             set { _state = value; ResetWindowHeight(); }
         }
         State _state;
-        internal WaitForFixedUpdate wait = new WaitForFixedUpdate();
-        HashSet<Vessel> movingVessels = new HashSet<Vessel>();
-        HashSet<Vessel> loweringVessels = new HashSet<Vessel>();
-        List<float> jumpToAltitudes = new List<float> { 10, 100, 1000, 10000, 50000 };
+        internal WaitForFixedUpdate wait = new();
+        HashSet<Vessel> movingVessels = [];
+        HashSet<Vessel> loweringVessels = [];
+        readonly List<float> jumpToAltitudes = [10, 100, 1000, 10000, 50000];
         RaycastHit[] hits = new RaycastHit[10];
 
         #region Monobehaviour routines
@@ -604,7 +604,7 @@ namespace BDArmory.VesselSpawning
 
         #region Spawning
         Vessel spawnedVessel;
-        HashSet<string> KerbalNames = new HashSet<string>();
+        HashSet<string> KerbalNames = [];
         int crewCapacity = -1;
         string vesselNameToSpawn = "";
         CustomCraftBrowserDialog craftBrowser;
@@ -1176,7 +1176,7 @@ namespace BDArmory.VesselSpawning
                 if (GUILayout.Button("VAB", CustomCraftBrowserDialog.ButtonStyle, GUILayout.Height(80))) craftBrowser.ChangeFolder(EditorFacility.VAB);
                 GUILayout.EndHorizontal();
                 GUILayout.BeginHorizontal();
-                GUILayout.Label(CustomCraftBrowserDialog.displayFolder, CustomCraftBrowserDialog.LabelStyle, GUILayout.Height(50), GUILayout.ExpandWidth(true));
+                GUILayout.Label(craftBrowser.DisplayFolder, CustomCraftBrowserDialog.LabelStyle, GUILayout.Height(50), GUILayout.ExpandWidth(true));
                 if (GUILayout.Button(StringUtils.Localize("#LOC_BDArmory_Generic_Select"), CustomCraftBrowserDialog.ButtonStyle, GUILayout.Height(50), GUILayout.MaxWidth(BDArmorySetup.WindowRectVesselMoverVesselSelection.width / 3))) folderSelectionMode = false;
                 GUILayout.EndHorizontal();
                 using (var folder = craftBrowser.subfolders.GetEnumerator())
@@ -1184,7 +1184,7 @@ namespace BDArmory.VesselSpawning
                     {
                         if (GUILayout.Button($"{folder.Current}", CustomCraftBrowserDialog.ButtonStyle, GUILayout.MaxHeight(60)))
                         {
-                            craftBrowser.ChangeFolder(CustomCraftBrowserDialog.facility, folder.Current);
+                            craftBrowser.ChangeFolder(craftBrowser.Facility, folder.Current);
                             break; // The enumerator can't continue since subfolders has changed.
                         }
                     }
@@ -1201,8 +1201,9 @@ namespace BDArmory.VesselSpawning
                         {
                             if (!vesselInfo.shipName.ToLower().Contains(selectionFilter.ToLower())) continue;
                         }
+                        var hasThumbnail = craftBrowser.craftThumbnails.ContainsKey(vesselURL);
                         GUILayout.BeginHorizontal(); // Vessel buttons
-                        if (GUILayout.Button($"{vesselInfo.shipName}", selectedVesselURL == vesselURL ? CustomCraftBrowserDialog.SelectedButtonStyle : CustomCraftBrowserDialog.ButtonStyle, GUILayout.MaxHeight(60), GUILayout.MaxWidth(BDArmorySetup.WindowRectVesselMoverVesselSelection.width - 190)))
+                        if (GUILayout.Button($"{vesselInfo.shipName}", selectedVesselURL == vesselURL ? CustomCraftBrowserDialog.SelectedButtonStyle : CustomCraftBrowserDialog.ButtonStyle, GUILayout.MaxHeight(64), GUILayout.MaxWidth(BDArmorySetup.WindowRectVesselMoverVesselSelection.width - 230)))
                         {
                             if (Time.realtimeSinceStartup - selectionTimer < 0.5f)
                             {
@@ -1213,12 +1214,12 @@ namespace BDArmory.VesselSpawning
                             else { selectedVesselURL = vesselURL; }
                             selectionTimer = Time.realtimeSinceStartup;
                         }
-                        GUILayout.Label(VesselInfoEntry(vesselURL, vesselInfo, true), CustomCraftBrowserDialog.InfoStyle);
+                        GUILayout.Label(VesselInfoEntry(vesselURL, vesselInfo, true), CustomCraftBrowserDialog.InfoStyle, GUILayout.Width(166));
+                        GUILayout.Label(hasThumbnail ? craftBrowser.craftThumbnails[vesselURL] : null, CustomCraftBrowserDialog.InfoStyle, GUILayout.Height(64), GUILayout.Width(64));
                         GUILayout.EndHorizontal();
                     }
             }
             GUILayout.EndScrollView();
-            GUILayout.Space(10);
             GUILayout.BeginHorizontal();
             if (GUILayout.Button(StringUtils.Localize("#LOC_BDArmory_Generic_Select"), selectedVesselURL != "" ? BDArmorySetup.ButtonStyle : BDArmorySetup.SelectedButtonStyle) && selectedVesselURL != "")
             {
@@ -1528,15 +1529,23 @@ namespace BDArmory.VesselSpawning
     internal class CustomCraftBrowserDialog
     {
         // Keep some of these as static so that they're remembered between instances of showing the dialog.
-        public static EditorFacility facility = EditorFacility.None;
+        static EditorFacility facility = EditorFacility.None;
         static string profile = HighLogic.SaveFolder;
         static string baseFolder;
-        public static string displayFolder;
+        static string displayFolder;
         static string currentFolder;
+
+        // Public getters
+        public string CurrentFolder => currentFolder;
+        public string BaseFolder => baseFolder;
+        public string DisplayFolder => displayFolder;
+        public string GameName => profile;
+        public EditorFacility Facility => facility;
 
         string _currentFolder; // For checking if the current folder has changed between instances and thus the craftList needs refreshing.
         public Dictionary<string, CraftProfileInfo> craftList = [];
         public Dictionary<string, int> crewCounts = [];
+        public Dictionary<string, Texture2D> craftThumbnails = [];
         public List<string> subfolders = [];
         public Action<string> selectFileCallback = null;
         public Action cancelledCallback = null;
@@ -1551,9 +1560,10 @@ namespace BDArmory.VesselSpawning
             if (string.IsNullOrEmpty(currentFolder) || !Directory.Exists(currentFolder)) ChangeFolder(facility); // Default to the current base folder if something is wrong.
             craftList = Directory.GetFiles(currentFolder, "*.craft").ToDictionary(craft => craft, craft => new CraftProfileInfo());
             if (craftList.ContainsKey(Path.Combine(currentFolder, "Auto-Saved Ship.craft"))) craftList.Remove(Path.Combine(currentFolder, "Auto-Saved Ship.craft")); // Ignore the Auto-Saved Ship.
-            subfolders = Directory.GetDirectories(currentFolder).Select(folder => Path.GetFileName(folder)).ToList();
+            subfolders = Directory.GetDirectories(currentFolder).Select(Path.GetFileName).ToList();
             if (currentFolder != baseFolder) subfolders.Insert(0, "..");
             CraftProfileInfo.PrepareCraftMetaFileLoad();
+            var thumbURLSubDir = $"/{Path.Combine(facility.ToString(), currentFolder.Substring(baseFolder.Length).Trim('/'))}";
             foreach (var craft in craftList.Keys.ToList())
             {
                 var craftMeta = Path.Combine(currentFolder, $"{Path.GetFileNameWithoutExtension(craft)}.loadmeta");
@@ -1567,17 +1577,19 @@ namespace BDArmory.VesselSpawning
                     craftList[craft].LoadDetailsFromCraftFile(craftNode, craft);
                     craftList[craft].SaveToMetaFile(craftMeta);
                 }
+                var thumbURL = $"/thumbs/{ShipConstruction.GetPlayerCraftThumbnailName(profile, thumbURLSubDir, Path.GetFileNameWithoutExtension(craft))}";
+                craftThumbnails[craft] = ShipConstruction.GetThumbnail(thumbURL);
             }
             var failedToParse = craftList.Where(kvp => kvp.Value is null || kvp.Value.partNames is null).ToList();
             if (failedToParse.Count > 0) Debug.LogError($"[BDArmory.VesselMover]: Failed to properly parse some loadmeta files:\n{string.Join("\n  ", failedToParse)}");
             crewCounts = craftList.ToDictionary(kvp => kvp.Key, kvp => (kvp.Value is null || kvp.Value.partNames is null) ? 0 : kvp.Value.partNames.Where(p => SpawnUtils.PartCrewCounts.ContainsKey(p)).Sum(p => SpawnUtils.PartCrewCounts[p]));
             ButtonStyle.stretchHeight = true;
-            ButtonStyle.fontSize = 20;
+            ButtonStyle.fontSize = 24;
             SelectedButtonStyle.stretchHeight = true;
-            SelectedButtonStyle.fontSize = 20;
-            InfoStyle.fontSize = 12;
+            SelectedButtonStyle.fontSize = 24;
+            InfoStyle.fontSize = 14;
             InfoStyle.richText = true;
-            LabelStyle.fontSize = 20;
+            LabelStyle.fontSize = 24;
             LabelStyle.alignment = TextAnchor.MiddleCenter;
             LabelStyle.normal.textColor = Color.green;
             shipNames.Where(kvp => File.Exists(kvp.Key)).ToDictionary(kvp => kvp.Key, kvp => kvp.Value); // Remove any no longer valid ship names.
@@ -1585,7 +1597,7 @@ namespace BDArmory.VesselSpawning
                 shipNames[craft] = craftList[craft].shipName;
         }
 
-        public void ChangeFolder(EditorFacility facility, string subfolder = null)
+        public void ChangeFolder(EditorFacility facility, string subfolder = null, bool relative = true)
         {
             if (facility == EditorFacility.None) // Very first time used, default to the VAB if the current vessel was launched from there or fall back to the SPH.
             {
@@ -1596,7 +1608,7 @@ namespace BDArmory.VesselSpawning
                 subfolder = null; // Revert to the base folder when changing facilities.
                 CustomCraftBrowserDialog.facility = facility;
             }
-            baseFolder = Path.GetFullPath(Path.Combine(KSPUtil.ApplicationRootPath, "saves", profile, "Ships", facility.ToString()));
+            baseFolder = Path.GetFullPath(ShipConstruction.GetShipsPathFor(profile, facility).TrimEnd(['/']));
             if (!Directory.Exists(baseFolder))
             {
                 var message = $"The base folder for the {facility} doesn't exist! Your KSP install is broken!";
@@ -1604,8 +1616,8 @@ namespace BDArmory.VesselSpawning
                 Competition.BDACompetitionMode.Instance.competitionStatus.Add(message);
                 return;
             }
-            if (string.IsNullOrEmpty(currentFolder)) currentFolder = baseFolder;
-            if (subfolder == null)
+            if (!relative || string.IsNullOrEmpty(currentFolder)) currentFolder = baseFolder;
+            if (string.IsNullOrEmpty(subfolder))
             {
                 currentFolder = baseFolder;
             }
@@ -1622,7 +1634,76 @@ namespace BDArmory.VesselSpawning
 
         public void CheckCurrent()
         {
-            if (_currentFolder != currentFolder) ChangeFolder(facility, currentFolder); // Another instance changed the current folder, so switch to match it.
+            if (_currentFolder != currentFolder) ChangeFolder(facility, currentFolder.Substring(baseFolder.Length), true); // Another instance changed the current folder, so switch to match it.
+        }
+    }
+
+    internal class CraftBrowserMissingThumbnailGenerator : MonoBehaviour
+    {
+        static CraftBrowserMissingThumbnailGenerator instance;
+        public static CraftBrowserMissingThumbnailGenerator Instance
+        {
+            get
+            {
+                if (instance == null)
+                {
+                    GameObject gameObject = new() { name = "CraftBrowserMissingThumbnailGenerator" };
+                    instance = gameObject.AddComponent<CraftBrowserMissingThumbnailGenerator>();
+                }
+                return instance;
+            }
+        }
+        public static bool recurse = false;
+
+        public void GenerateMissingThumbnails(EditorFacility facility) => StartCoroutine(GenerateMissingThumbnailsWorker(facility));
+        IEnumerator GenerateMissingThumbnailsWorker(EditorFacility facility)
+        {
+            var craftBrowser = new CustomCraftBrowserDialog();
+            craftBrowser.ChangeFolder(facility);
+            var thumbURLRoot = Path.GetFullPath(Path.Combine(KSPUtil.ApplicationRootPath, "thumbs"));
+
+            List<string> folders = [craftBrowser.BaseFolder];
+            if (recurse) folders.AddRange(Directory.GetDirectories(craftBrowser.BaseFolder, "*", SearchOption.AllDirectories));
+            foreach (var folder in folders)
+            {
+                craftBrowser.ChangeFolder(facility, folder, true);
+                var thumbURLSubDir = $"/{Path.Combine(facility.ToString(), craftBrowser.CurrentFolder.Substring(craftBrowser.BaseFolder.Length).Trim('/'))}";
+                bool hasShownMessage = false;
+                foreach (var craft in craftBrowser.craftList.Keys)
+                {
+                    var craftInfo = craftBrowser.craftList[craft];
+                    if (craftInfo.UnavailableShipParts.Count > 0)
+                    {
+                        Debug.Log($"[BDArmory.VesselMover]: Craft {craftInfo.shipName} has missing parts, unable to generate thumbnail.");
+                        continue;
+                    }
+                    var thumbURL = Path.Combine(thumbURLRoot, $"{ShipConstruction.GetPlayerCraftThumbnailName(craftBrowser.GameName, thumbURLSubDir, Path.GetFileNameWithoutExtension(craft))}.png"); // Actual URL.
+                    if (!File.Exists(thumbURL))
+                    {
+                        if (!hasShownMessage)
+                        {
+                            ScreenMessages.PostScreenMessage($"{StringUtils.Localize("#LOC_BDArmory_CraftBrowser_GenerateMissingThumbnailsGeneratingForCraftIn")} {craftBrowser.DisplayFolder}", 5);
+                            hasShownMessage = true;
+                        }
+                        // Load the ship and take a thumbnail of it.
+                        Debug.Log($"[BDArmory.VesselMover]: Generating thumbnail for {craftInfo.shipName} at KSP{thumbURL.Substring(KSPUtil.ApplicationRootPath.Length)}");
+                        ScreenMessages.PostScreenMessage($"{StringUtils.Localize("#LOC_BDArmory_CraftBrowser_GenerateMissingThumbnailsGeneratingFor")} {craftInfo.shipName}.", 3);
+                        yield return null;
+                        try
+                        {
+                            EditorLogic.LoadShipFromFile(craft);
+                            ShipConstruction.CaptureThumbnail(EditorLogic.fetch.ship, $"/thumbs", ShipConstruction.GetPlayerCraftThumbnailName(craftBrowser.GameName, thumbURLSubDir, Path.GetFileNameWithoutExtension(craft)));
+                        }
+                        catch (Exception e)
+                        {
+                            Debug.LogError($"[BDArmory.VesselMover]: Error capturing thumbnail of {craftInfo.shipName} {e.Message}\n{e.StackTrace}");
+                            ScreenMessages.PostScreenMessage($"{StringUtils.Localize("#LOC_BDArmory_CraftBrowser_GenerateMissingThumbnailsFailure")} {craftInfo.shipName}", 5);
+                        }
+                    }
+                }
+            }
+            ScreenMessages.PostScreenMessage(StringUtils.Localize("#LOC_BDArmory_CraftBrowser_GenerateMissingThumbnailsFinished"), 5);
+            EditorLogic.LoadShipFromFile(null);
         }
     }
 }
